--- a/src/index.html
+++ b/src/index.html
@@ -18,5 +18,10 @@
       <h1 class="mt-5">OMG You will not belive me but.</h1>
       <h1 id="excuse" class="mt-5"></h1>
     </div>
+    <div id="contenedor-boton">
+      <button type="button" id="boton">
+        otra excusa
+      </button>
+    </div>
   </body>
 </html>
