--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     </div>
     <div id="contenedor-boton">
       <button type="button" id="boton">
-        otra excusa
+        otra excusa y otra
       </button>
     </div>
   </body>
